fast/dom/selectorAPI/caseID.html is a constant text failure (when repro steps are followed). https://bugs.webkit.org/show_bug.cgi?id=260556 rdar://114287946

Reviewed by Antti Koivisto.

The CSSSelectorParserContext's operator==() was wrong, it was using `||` instead
of `&&` between the data member checks. Fix the issue by using the default
operator==().

* LayoutTests/TestExpectations:
* Source/WebCore/css/parser/CSSSelectorParser.cpp:
(WebCore::CSSSelectorParserContext::operator== const): Deleted.

Canonical link: https://commits.webkit.org/267237@main